[8.19] Fix race in TickerScheduleTriggerEngine by checking watcher to node allocation (#148483)
* Clear watch schedules when starting trigger engine (#145325)

When new nodes appear in the cluster the watcher allocation may change
If we don't reset the schedules for a given node, there is a chance
multiple nodes will execute the watch.

This fix revealed a race condition on watch insertion which has been fixed by
adding recentlyAddedSchedules collection that handles schedules added
during the watcher service reload.

* Fix race in TickerScheduleTriggerEngine by checking watcher to node allocation (#147678) (#148392)

The watches added during the WatcherService reload now collected and re-added after the TriggerService is started. There is another watch -> node allocation check now, that should prevent duplicated watches on different nodes.